--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,3 +9,170 @@ body, html {
   font-family: 'Teko', sans-serif;
   color: #231010;
 }
+
+a {
+  text-decoration: none;
+  color: #231010;
+  font-weight: bold;
+  transition: color .1s;
+}
+
+a:hover {
+  color: #A7A7A7;
+}
+
+button {
+  background-color: #D9EAD3;
+  border: 0;
+  padding: 1%;
+  color: white;
+  font-weight: bold;
+  transition: background-color .1s;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: #A7A7A7;
+}
+
+.post-list {
+  margin: 0;
+  padding: 0;
+}
+
+textarea, input {
+  padding: .5%;
+  border-radius: 5px;
+  border: 1px solid #A7A7A7;
+}
+
+textarea:focus, input:focus {
+  outline: none;
+  border: 1px solid #231010;
+}
+
+textarea {
+  min-width: 40%;
+  min-height: 100px;
+}
+
+form > div {
+  margin-bottom: 2%;
+}
+
+form label {
+  display: block;
+}
+
+.wrapper {
+  width: 100%;
+  min-height: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  border-bottom: 1px solid #231010;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1%;
+}
+
+header h1 {
+  font-size: 1em;
+}
+
+main {
+  flex: 1;
+  padding: 2% 4%;
+}
+
+.btn-no-style {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  text-decoration: none;
+  color: #231010;
+  font-size: 100%;
+  font-weight: bold;
+  transition: color .1s;
+  margin-left: 16px;
+}
+
+.btn-no-style:hover {
+  background: none;
+  color: #A7A7A7;
+}
+
+.delete-post-btn {
+  background-color: #D9EAD3;
+}
+
+.delete-post-btn:hover {
+  background-color: #231010;
+}
+
+.post {
+  margin-bottom: 2%;
+  line-height: 150%;
+}
+
+.post .title span {
+  font-style: italic;
+  font-size: 90%;
+  color: #A7A7A7;
+}
+
+.edit-link {
+  display: block;
+  margin: -1.5% 0 2% 0;
+}
+
+.upvote-btn {
+  background-color: #D9EAD3;
+  transition: background-color .1s;
+}
+
+.upvote-btn:hover {
+  background-color: #D9EAD3;
+}
+
+.comment-form {
+  margin-bottom: 5%;
+}
+
+.comment {
+  padding: 1%;
+  margin-bottom: 1%;
+}
+
+.comment:nth-child(odd) {
+  background-color: #231010;
+}
+
+.comment .meta {
+  font-size: 90%;
+  margin-bottom: .5%;
+  opacity: .6;
+}
+
+.new-post-form input {
+  width: 300px;
+}
+
+.edit-post-form {
+  margin-bottom: 5%;
+}
+
+footer {
+  border-top: 1px solid #231010;
+  display: flex;
+  justify-content: center;
+  padding: 1%;
+  font-size: 110%;
+}
