--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,7 @@ body, html {
 
 a {
   text-decoration: none;
-  color: #231010;
+  color: #D9EAD3;
   font-weight: bold;
   transition: color .1s;
 }
@@ -25,6 +25,7 @@ button {
   background-color: #D9EAD3;
   border: 0;
   padding: 1%;
+  margin: 25%;
   color: white;
   font-weight: bold;
   transition: background-color .1s;
@@ -33,7 +34,7 @@ button {
 }
 
 button:hover {
-  background-color: #A7A7A7;
+  background-color: #D9EAD3;
 }
 
 .post-list {
@@ -75,15 +76,18 @@ form label {
 }
 
 header {
-  border-bottom: 1px solid #231010;
+  border-bottom: 1px solid #D9EAD3;
+  background-color: #231010;
   display: flex;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
-  padding: 0 1%;
+  padding: 0 3%;
 }
 
 header h1 {
-  font-size: 1em;
+  font-size: 2em;
+  color: #D9EAD3;
 }
 
 main {
@@ -94,14 +98,13 @@ main {
 .btn-no-style {
   background: none;
   border: none;
-  padding: 0;
+  padding: inherit;
   cursor: pointer;
   text-decoration: none;
-  color: #231010;
+  color: #D9EAD3;
   font-size: 100%;
   font-weight: bold;
   transition: color .1s;
-  margin-left: 16px;
 }
 
 .btn-no-style:hover {
@@ -110,7 +113,7 @@ main {
 }
 
 .delete-post-btn {
-  background-color: #D9EAD3;
+  background-color: #231010;
 }
 
 .delete-post-btn:hover {
