--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@ body, html {
   padding: 0;
   margin: 0;
   font-family: 'Teko', sans-serif;
-  color: #231010;
+  color: #A7A7A7;
 }
 
 a {
@@ -22,7 +22,7 @@ a:hover {
 }
 
 button {
-  background-color: #D9EAD3;
+  background-color: #231010;
   border: 0;
   padding: 1%;
   margin: 25%;
