--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,8 +15,11 @@
         <a href="/">Tech Blog</a>
       </h1>
       <nav>
+        {{#if loggedIn}}
         <button id="logout" class="btn-no-style">Logout</button>
+        {{else}}
         <a href="/login">Login</a>
+        {{/if}}
       </nav>
     </header>
     <main>
@@ -26,7 +29,8 @@
       Thanks for visiting!
     </footer>
   </div>
-
+    {{#if loggedIn}}
+    <script src="/javascript/logout.js"></script>
+    {{/if}}
 </body>
-
 </html>
