--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,13 +12,16 @@
   <div class="wrapper">
     <header>
       <h1>
-        <a href="/">Tech Blog</a>
+        <a href="/" class="home">Tech Blog</a>
       </h1>
       <nav>
         {{#if loggedIn}}
         <button id="logout" class="btn-no-style">Logout</button>
         {{else}}
-        <a href="/login">Login</a>
+        <a href="/login" class="login-btn-no-style">Login</a>
+        {{/if}}
+        {{#if loggedIn}}
+        <a href="/dashboard" class="dashboard-btn">Dashboard</a>
         {{/if}}
       </nav>
     </header>
@@ -26,7 +29,7 @@
       {{{ body }}}
     </main>
     <footer>
-      Thanks for visiting!
+      THANKS FOR VISITING!
     </footer>
   </div>
     {{#if loggedIn}}
